Avoid wrapping of Theme options button

--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -112,6 +112,7 @@ header {
 
     #theme-display {
       @include button-unselected();
+      white-space: nowrap;
 
       cursor: default;
 
