--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -95,6 +95,7 @@ body {
   padding-top: 1rem;
   padding-left: 15vw;
   padding-right: 15vw;
+  min-height: 1vh;
 }
 
 body>div {
